RESOLVED FIXED272009
Prevent locked files assertion from taking a power assertion
https://bugs.webkit.org/show_bug.cgi?id=272009
Summary Prevent locked files assertion from taking a power assertion
Ben Nham
Reported 2024-04-01 17:32:37 PDT
In some instances, the locked files assertion in NetworkProcess acquires a power assertion that resets the idle sleep timer for several seconds, which is not necessary. Stop taking the power assertion here.
Attachments
Ben Nham
Comment 1 2024-04-01 17:33:04 PDT
Ben Nham
Comment 2 2024-04-01 17:36:42 PDT
EWS
Comment 3 2024-04-02 20:31:33 PDT
Committed 276985@main (b77155f9e2ec): <https://commits.webkit.org/276985@main> Reviewed commits have been landed. Closing PR #26708 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.