Prevent locked files assertion from taking a power assertion https://bugs.webkit.org/show_bug.cgi?id=272009 rdar://125037124

Reviewed by Per Arne Vollan and Chris Dumez.

The locked files assertion in NetworkProcess can sometimes take a power assertion, because
FinishTaskInterruptable assertions take power assertions. (There are cases where the system allows
you to create a FinishTaskInterruptable but doesn't actually immediately activate it, so it doesn't
*always* take a power assertion, but it can and does create a power assertion in various
circumstances.) This is bad because even taking and then immediately releasing a power assertion can
reset the idle timer for the whole device for several seconds.

To fix this, take a FinishTaskCanSleep assertion instead.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::setIsHoldingLockedFiles):
* Source/WebKit/NetworkProcess/NetworkProcess.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::acquireLockedFileActivity): Deleted.
(WebKit::NetworkProcess::invalidateFileActivity): Deleted.
(WebKit::NetworkProcess::hasAcquiredFileActivity const): Deleted.
* Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
(WebKit::runningBoardNameForAssertionType):
(WebKit::runningBoardDomainForAssertionType):
* Source/WebKit/UIProcess/ProcessAssertion.cpp:
(WebKit::processAssertionTypeDescription):
* Source/WebKit/UIProcess/ProcessAssertion.h:
* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::ProcessThrottler::assertionName const):

Canonical link: https://commits.webkit.org/276985@main