Source/WebKit/NetworkProcess/NetworkProcess.h
@@ -72,10 +72,6 @@
 typedef struct OpaqueCFHTTPCookieStorage*  CFHTTPCookieStorageRef;
 #endif
 
-#if USE(EXTENSIONKIT)
-OBJC_CLASS WKGrant;
-#endif
-
 namespace IPC {
 class FormDataReference;
 }
@@ -523,11 +519,6 @@ private:
 
 #if USE(RUNNINGBOARD)
     void setIsHoldingLockedFiles(bool);
-#if USE(EXTENSIONKIT)
-    bool acquireLockedFileActivity();
-    void invalidateFileActivity();
-    bool hasAcquiredFileActivity() const;
-#endif
 #endif
     void stopRunLoopIfNecessary();
 
@@ -564,9 +555,6 @@ private:
 
 #if USE(RUNNINGBOARD)
     WebSQLiteDatabaseTracker m_webSQLiteDatabaseTracker;
-#if USE(EXTENSIONKIT)
-    OSObjectPtr<dispatch_semaphore_t> m_holdingLockedFileSemaphore;
-#endif
     RefPtr<ProcessAssertion> m_holdingLockedFileAssertion;
 #endif
     
