Source/WebKit/UIProcess/ProcessThrottler.cpp
@@ -216,6 +216,7 @@ String ProcessThrottler::assertionName(ProcessAssertionType type) const
             return "NearSuspended"_s;
         case ProcessAssertionType::UnboundedNetworking:
         case ProcessAssertionType::MediaPlayback:
+        case ProcessAssertionType::FinishTaskCanSleep:
         case ProcessAssertionType::FinishTaskInterruptable:
         case ProcessAssertionType::BoostedJetsam:
             ASSERT_NOT_REACHED(); // These other assertion types are not used by the ProcessThrottler.
